Update ShoukanCommand.java